--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "three": "^0.124.0",
+    "vanta": "^0.5.22"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
