removed shimmering backdrop

--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/sacramento": "^4.5.8",
     "framer-motion": "^6.3.3",
-    "next": "^12.1.6",
+    "next": "^15.0.3",
+    "node": "^18.20.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
-    "three": "^0.124.0",
+    "three": "^0.170.0",
     "vanta": "^0.5.22"
   },
   "devDependencies": {
