--- a/package.json
+++ b/package.json
@@ -19,12 +19,9 @@
     "@fontsource/sacramento": "^4.5.8",
     "framer-motion": "^6.3.3",
     "next": "^15.0.3",
-    "node": "^18.20.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.3.1",
-    "three": "^0.170.0",
-    "vanta": "^0.5.22"
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
